--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "troop-comp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zenith-one.github.io/rok-compensation/",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
@@ -24,6 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "verify": "serve -s build",
+    "predeploy": "npm run build",
+    "deploy": "npm run predeploy && git subtree push --prefix build origin gh-pages",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
