--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "verify": "serve -s build",
     "predeploy": "npm run build",
-    "deploy": "npm run predeploy && git subtree push --prefix build origin gh-pages",
+    "deploy": "git subtree push --prefix build origin gh-pages",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
